--- a/packager/media/formats/CMakeLists.txt
+++ b/packager/media/formats/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(dvb)
 add_subdirectory(packed_audio)
 add_subdirectory(ttml)
 add_subdirectory(mp4)
+add_subdirectory(scte35)
 add_subdirectory(mp2t)
 add_subdirectory(webm)
 add_subdirectory(webvtt)
